--- a/public/views/receita.html
+++ b/public/views/receita.html
@@ -1,18 +1,13 @@
 
 <div class="page-receita">
+  <div class="navbar-topping"></div>
   <nav role="navigation" class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
         <button type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" class="navbar-toggle collapsed"><span class="sr-only">Alternar menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">
            
           Panelando
-          <div class="navbar-brand-icon"><i class="icon icon-food-1"></i></div></a>
-      </div>
-      <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Cadastrar</a></li>
-        </ul>
+          <div class="navbar-brand-icon"><i class="icon icon-food-1">  </i></div></a>
       </div>
     </div>
   </nav>
@@ -75,4 +70,10 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+    <div class="container">
+      <div class="pull-left"><span class="semi">2014 &copy; Panelando - Todos os Direitos Reservados</span></div>
+      <div class="pull-right"><i class="octicon octicon-code"></i><span class="thin">&nbsp; com &nbsp;</span><i class="octicon octicon-heart"></i><span class="thin">&nbsp; por </span><span class="bold">Gui </span><span class="thin">e </span><span class="bold">Sam</span></div>
+    </div>
+  </footer>
 </div>
