--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -8,6 +8,7 @@ head
 
   //- Bootstrap
   link(href="assets/stylesheets/style.css", rel="stylesheet")
+  link(href="  https://raw.githubusercontent.com/daneden/animate.css/master/animate.min.css", rel="stylesheet")
 
   //- Favicon
   link(rel="shortcut icon", href="favicon.ico")
@@ -27,6 +28,8 @@ body
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js")
   //- Angular Route
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js")
+  //- Angular Animate
+  script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.js")
   //- Local Files
-  script(src="assets/javascripts/app.js")
   script(src="assets/javascripts/main.js")
+  script(src="assets/javascripts/app.js")
