--- a/src/views/receita.jade
+++ b/src/views/receita.jade
@@ -1,4 +1,6 @@
 div.page-receita
+  div.navbar-topping
+
   nav.navbar.navbar-default(role="navigation")
     div.container
       //- Brand and toggle get grouped for better mobile display
@@ -12,16 +14,7 @@ div.page-receita
         a.navbar-brand(href="#") 
           |Panelando
           div.navbar-brand-icon
-            i.icon.icon-food-1
-
-      //- Collect the nav links, forms, and other content for toggling
-      div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
-        ul.nav.navbar-nav.navbar-right
-          li
-            a(href="#") Login
-          li
-            a(href="#") Cadastrar
-   
+            i.icon.icon-food-1   
 
   div.container
     div.row
@@ -97,3 +90,15 @@ div.page-receita
               div.notepad-item
                 |&nbsp;
             
+  footer.footer
+    div.container
+      div.pull-left
+        span.semi 2014 &copy; Panelando - Todos os Direitos Reservados
+      div.pull-right
+        i.octicon.octicon-code
+        span.thin &nbsp; com &nbsp;
+        i.octicon.octicon-heart
+        span.thin &nbsp; por 
+        span.bold Gui 
+        span.thin e 
+        span.bold Sam
