--- a/public/views/nova-receita.html
+++ b/public/views/nova-receita.html
@@ -1,5 +1,6 @@
 
 <div class="page-receita">
+  <div class="navbar-topping"></div>
   <nav role="navigation" class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -8,12 +9,6 @@
           Panelando
           <div class="navbar-brand-icon"><i class="icon icon-food-1"></i></div></a>
       </div>
-      <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Cadastrar</a></li>
-        </ul>
-      </div>
     </div>
   </nav>
   <div class="container">
@@ -21,11 +16,11 @@
       <div class="col-md-4">
         <nav role="navigation" class="main-menu">
           <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="#/">Home
+            <li><a href="#/">Home
                 <div class="link-icon"><i class="icon icon-shop"></i></div></a></li>
             <li><a href="#/receitas">Receitas
                 <div class="link-icon"><i class="icon icon-food-1"></i></div></a></li>
-            <li><a href="#/receitas/nova">Nova Receita
+            <li class="active"><a href="#/receitas/nova">Nova Receita
                 <div class="link-icon"><i class="icon icon-doc-1"></i></div></a></li>
           </ul>
         </nav>
@@ -53,7 +48,7 @@
                 <h5><i class="icon icon-clock-1"> </i>
                   <div class="l-receita-info-caption">
                     <div class="l-receita-info-input">
-                      <input data-ng-model="recipe.numberOfPortions" class="form-control"/>
+                      <input data-ng-model="recipe.preparationTime" class="form-control"/>
                     </div>&nbsp;min
                   </div>
                 </h5>
@@ -62,7 +57,7 @@
                 <h5><i class="icon icon-user-1"> </i>
                   <div class="l-receita-info-caption">
                     <div class="l-receita-info-input">
-                      <input data-ng-model="recipe.preparationTime" class="form-control"/>
+                      <input data-ng-model="recipe.numberOfPortions" class="form-control"/>
                     </div>&nbsp;porções
                   </div>
                 </h5>
@@ -105,4 +100,10 @@
       </div>
     </div>
   </div>
+  <footer class="footer">
+    <div class="container">
+      <div class="pull-left"><span class="semi">2014 &copy; Panelando - Todos os Direitos Reservados</span></div>
+      <div class="pull-right"><i class="octicon octicon-code"></i><span class="thin">&nbsp; com &nbsp;</span><i class="octicon octicon-heart"></i><span class="thin">&nbsp; por </span><span class="bold">Gui </span><span class="thin">e </span><span class="bold">Sam</span></div>
+    </div>
+  </footer>
 </div>
