--- a/src/assets/stylesheets/global/components/_navbar.sass
+++ b/src/assets/stylesheets/global/components/_navbar.sass
@@ -1,5 +1,17 @@
+.navbar-topping
+	width: 100%
+	height: 11px
+	z-index: 2000
+	position: absolute
+	background: url(../images/general/borda-h.png)
+
+
 .navbar
-	min-height: 80px
+	border-top: 5px solid transparent
+	min-height: 100px
+	padding: 10px
+	background: #fff
+	box-shadow: 0 2px 2px rgba(11, 25, 28, 0.1)
 
 	.navbar-brand
 		position: relative
