--- a/src/assets/stylesheets/style.sass
+++ b/src/assets/stylesheets/style.sass
@@ -4,6 +4,8 @@
 
 @import 'global/components/carousel'
 @import 'global/components/fileinput'
+@import 'global/components/footer'
+@import 'global/components/icons'
 @import 'global/components/main-menu'
 @import 'global/components/notepad-block'
 @import 'global/components/navbar'
