--- a/src/views/home.jade
+++ b/src/views/home.jade
@@ -1,4 +1,5 @@
 div.page-home
+  div.navbar-topping
   nav.navbar.navbar-default(role="navigation")
     div.container
       //- Brand and toggle get grouped for better mobile display
@@ -13,14 +14,6 @@ div.page-home
           |Panelando
           div.navbar-brand-icon
             i.icon.icon-food-1
-
-      //- Collect the nav links, forms, and other content for toggling
-      div.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
-        ul.nav.navbar-nav.navbar-right
-          li
-            a(href="#") Login
-          li
-            a(href="#") Cadastrar
 
   div.container
     div.row
@@ -172,3 +165,16 @@ div.page-home
               a.link(href="#")
                 i.icon.icon-plus-squared-alt
                 |Ver Receita
+
+  footer.footer
+    div.container
+      div.pull-left
+        span.semi 2014 &copy; Panelando - Todos os Direitos Reservados
+      div.pull-right
+        i.octicon.octicon-code
+        span.thin &nbsp; com &nbsp;
+        i.octicon.octicon-heart
+        span.thin &nbsp; por 
+        span.bold Gui 
+        span.thin e 
+        span.bold Sam
